psyndb: fix typo on homepage

--- a/src/app/templates/homepage.html
+++ b/src/app/templates/homepage.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="jumbotron" style="position: relative; padding-top: 3rem; padding-bottom: 3rem;">
   <h1>PSynDB</h1>
-  <p>PSynDB is a web-based tool for generating differitially private synthetic data.</p>
+  <p>PSynDB is a web-based tool for generating differentially private synthetic data.</p>
   <h5 style="bottom: 5px; width: 92%; position: absolute; text-align: right;">Version 1.0</h5>
 </div>
 <div class="container">
